--- a/chapter.tex
+++ b/chapter.tex
@@ -2,8 +2,11 @@
 \PartialToc
 %\startcontents[chapters]
 %\printcontents[chapters]{}{1}{\section*{\contentsname}}
+
+% 1 ---------------------------------------------------------------------------------------------------------------
+
 \section{IT1A\_W03,IT1A\_U03,IT1A\_U07}
-\textbf{W~jaki sposób można obliczyć długość tekstu przekazanego jako argument w~poniższej funkcji?}
+\textbf{W jaki sposób można obliczyć długość tekstu przekazanego jako argument w~poniższej funkcji?}
 \begin{lstlisting}[language=c]
 void foo(const char* txt) {
 . . .
@@ -33,7 +36,6 @@ while(c != '\0') {
 \end{itemize}
   
 \subsection{Wprowadzenie teoretyczne}
-\textbf{Łańcuch znaków}\\
 Łańuch znaków w języku C to tablica znaków której ostatni element ma wartość \textbackslash0 - null\\
 Poniższe deklaracje łańcucha znaków są równoważne:
 \begin{lstlisting}[language=c]
@@ -61,7 +63,9 @@ strlen(s1);
 /*Returns the length of string s1*/
 
 strcmp(s1, s2);
-/*Returns 0 if s1 and s2 are the same; less than 0 if s1<s2; greater than 0 if s1>s2*/
+/*Returns 0 if s1 and s2 are the same;
+  less than 0 if s1<s2;
+  greater than 0 if s1>s2*/
 \end{lstlisting}
 
 % 2 ---------------------------------------------------------------------------------------------------------------
@@ -89,19 +93,19 @@ Kompilator języka C potrafi obliczyć długość tablicy jeżeli została ona z
 \begin{lstlisting}[language=c]
 int array[] = { 1, 2, 3, 4 };
 int n = sizeof(array) / sizeof(array[0]);
-printf("Array has %d elements\n", n); /* it should returns 4 */
+printf("%d", n); /* it should returns 4 */
 
 foo(array);
 /*...*/
 void foo(int t[]){
    int n = sizeof(t) / sizeof(t[0]);
-   printf("Array has %d elements\n", n); /* it shouldn't returns 4 */
+   printf("%d", n); /* it shouldn't returns 4 */
 }
 \end{lstlisting}
 
 % 4 ---------------------------------------------------------------------------------------------------------------
 
-\section{Pytanie 4}dassdas
+\section{IT1A\_W03,IT1A\_U03,IT1A\_U07}
 
 % 5 ---------------------------------------------------------------------------------------------------------------
 
@@ -149,14 +153,15 @@ struct foo1 {
 \end{lstlisting}
 \textbf{Drugi przykład dla struktur}
 \begin{lstlisting}[language=c]
-struct MixedData  /* After compilation in 32-bit x86 machine */
+struct MixedData      /* After compilation in 32-bit x86 machine */
 {
-    char Data1; /* 1 byte */
-    char Padding1[1]; /* 1 byte for the following 'short' to be aligned on a 2 byte boundary
-assuming that the address where structure begins is an even number */
-    short Data2; /* 2 bytes */
-    int Data3;  /* 4 bytes - largest structure member */
-    char Data4; /* 1 byte */
+    char Data1;       /* 1 byte */
+    char Padding1[1]; /* 1 byte for the following 'short'
+	                to be aligned on a 2 byte boundary assuming that
+	                the address where structure begins is an even number */
+    short Data2;      /* 2 bytes */
+    int Data3;        /* 4 bytes - largest structure member */
+    char Data4;       /* 1 byte */
     char Padding2[3]; /* 3 bytes to make total size of the structure 12 bytes */
 };
 \end{lstlisting}
@@ -167,7 +172,7 @@ sizeof(x) = 1 + padding(1) + 2 + padding(4) + 8 = 16
 
 % 6 ---------------------------------------------------------------------------------------------------------------
 
-\section{Pytanie 6}dassdas
+\section{IT1A\_W03,IT1A\_U03,IT1A\_U07}
 
 % 7 ---------------------------------------------------------------------------------------------------------------
 
@@ -225,8 +230,8 @@ int licznik() {
 }
 
 int main() {
-  printf("Wywoluje funkcje licznik %d", licznik());  /* wypisze sie 1 */
-  printf("\n...drugi raz %d", licznik());     /* wypisze sie 2 */ 
+  printf("%d", licznik());  /* wypisze sie 1 */
+  printf("%d", licznik());  /* wypisze sie 2 */ 
 }
 \end{lstlisting}
 
@@ -249,8 +254,8 @@ class przyklad {
   public:
     static void metoda() {
       c=10; 
-      // b=10;     - blad! 'b' nie jest statyczne! nie ma do niego dostepu
-      // this->a = 10;  - blad!! w metodach statycznych 'this' nie istnieje!!
+      // b=10;         - blad! 'b' nie jest statyczne! nie ma do niego dostepu
+      // this->a = 10; - blad!! w metodach statycznych 'this' nie istnieje!!
     }
 };
 \end{lstlisting}
