--- a/chapter.tex
+++ b/chapter.tex
@@ -70,8 +70,42 @@ strcmp(s1, s2);
 
 % 2 ---------------------------------------------------------------------------------------------------------------
 
-\section{IT1A\_W03,IT1A\_U03,IT1A\_U07}dassdas
+\section{IT1A\_W03,IT1A\_U03,IT1A\_U07}
+\textbf{Co mozesz powiedzieć o poniższej deklaracji?}
+\begin{lstlisting}[language=c]
+int t[10]={1, 2, [4]=1}
+\end{lstlisting}
 
+\subsection{Wprowadzenie teoretyczne}
+W standardzie C99 dodane zostało takie cos jak Designated Initializers. Pozwalaja one inicjalizowac elementy tablicy w dowolnej kolejnosci podając je podczas inicjalizacji w sposób \textbf{\textit{[index]=wartosc}} lub \textbf{\textit{[poczatek ... koniec]=wartosc}}. Jeśli po inicjalizacji elementu w jeden z wymienionych powyżej sposobów pojawi się normalna inicjalizacja np {[2]=5, 4} to indeksem liczby 4 będzie 3 ponieważ przyjmie ona następny wolny indeks w tablicy, tutaj było to 3.
+
+\begin{lstlisting}[language=c]
+int tab[]={1,2,3,[4]=4,5}  /* stworzy tablice: 1,2,3,0,4,5 */
+int tab[]={[1 ... 2]=5, 1} /* stworzy tablice: 0,5,5,1 */
+\end{lstlisting}
+	
+A co jeśli zrobimy tak:
+\begin{lstlisting}[language=c]
+int tab[]={1,2,3,[4]=4,{5, 6, 7, 8}}
+\end{lstlisting}
+
+\textbf{\textit{Odpowiedź}}: Kod dalej sie poprawnie skompiluje a tablica bedzie miala zawartosc 1,2,3,0,4,5 (zostala wzięta 1 wartosc z bloku {5,6,7,8}) wygenerowany zostanie jedynie warning.\\
+	
+PS: W konstrukcji: [poczatek ... koniec]=wartosc ważna jest spacja po "poczatek"  $\ddot\smile$\\
+	
+Źródło: \href{https://gcc.gnu.org/onlinedocs/gcc/Designated-Inits.html}{https://gcc.gnu.org/onlinedocs/gcc/Designated-Inits.html}
+
+\subsection{Kod testowy}
+\begin{lstlisting}[language=c]
+int tab[]={1,2,3,[4]=4,{5, 6, 7, 8}};
+
+int i=0;
+for(i=0; i<10; i++) {
+	printf("tab[%d]=%d\n", i, tab[i]);
+}
+	
+return 0;
+\end{lstlisting}
 % 3 ---------------------------------------------------------------------------------------------------------------
 
 \section{IT1A\_W03,IT1A\_U03,IT1A\_U07} 
