--- a/chapter.tex
+++ b/chapter.tex
@@ -106,7 +106,80 @@ void foo(int t[]){
 % 4 ---------------------------------------------------------------------------------------------------------------
 
 \section{IT1A\_W03,IT1A\_U03,IT1A\_U07}
+\textbf{Która z implementacji funkcji zwracajacej tablice jest poprawna?}
 
+\subsection{Wprowadzenie teoretyczne}
+
+Pamięć w C możemy alokować jedną z 3 funkcji:
+\begin{lstlisting}[language=c]
+void* malloc(size_t size) /* Alokuje podana 
+	ilosc pamieci i nie inicjalizuje jej */
+void* calloc(size_t numOfElems, size_t sizeOfElem) /* Dziala podobnie jak 
+	malloc z tym, ze inicjalizuje pamiec zerami */
+void* realloc(void* memory, size_t newSize) /* Realokuje pamiec moze ja 
+	zwiekszyc/zmniejszyc jesli zamiast parametru memory podamy NULL
+	dziala jak malloc */
+\end{lstlisting}
+
+Pamięć zwalniamy funkcją:
+\begin{lstlisting}[language=c]
+void free(void* memory);
+\end{lstlisting}
+
+Bonus: Dodatkowo alokacje tablicy 2D.
+	
+\subsection{Przykładowy kod i odpowiedzi}
+	
+\begin{lstlisting}[language=c]
+int *tab1=getTableRealloc(10);
+int *tab2;
+allocTable(&tab2, 10);
+int **tab2d=get2dTable(3,3);
+
+int i=0;
+for(i=0; i<10; i++) {
+	tab1[i]=i;
+	tab2[i]=i;
+	printf("tab1[\%d]=\%d tab2[\%d]=\%d\n", i, tab1[i], i, tab2[i]);
+}
+	
+free(tab1);
+free(tab2);
+free2d(tab2d, 3);
+
+return 0;
+}
+
+int* getTable(int n) {
+	return (int*)malloc(n*sizeof(int));
+}
+
+int* getTableCalloc(int n) {
+	return (int*)calloc(n, sizeof(n));
+}
+
+int* getTableRealloc(int n) {
+	return (int*)realloc(NULL, n*sizeof(int));
+}
+
+void allocTable(int **tab, int n) {
+	*tab=(int*)malloc(n*sizeof(int));
+}
+
+int ** get2dTable(int row, int col) {
+	int **tab=(int**)malloc(row*sizeof(int));
+	int i=0;
+	for(i=0; i<row; i++) tab[i]=(int*)malloc(col*sizeof(int));
+
+	return tab;
+}
+
+void free2d(int **tab, int row) {
+	int i=0;
+	for(i=0; i<row; i++) free(tab[i]);
+	free(tab);
+}
+\end{lstlisting}
 % 5 ---------------------------------------------------------------------------------------------------------------
 
 \section{IT1A\_W03,IT1A\_U03,IT1A\_U07}
