Fixes to guestion-4

--- a/chapter.tex
+++ b/chapter.tex
@@ -140,7 +140,7 @@ int i=0;
 for(i=0; i<10; i++) {
 	tab1[i]=i;
 	tab2[i]=i;
-	printf("tab1[\%d]=\%d tab2[\%d]=\%d\n", i, tab1[i], i, tab2[i]);
+	printf("tab1[%d]=%d,tab2[%d]=%d\n", i, tab1[i], i, tab2[i]);
 }
 	
 free(tab1);
