--- a/chapter.tex
+++ b/chapter.tex
@@ -397,6 +397,85 @@ class B{
 \subsection{Wprowadzenie teoretyczne}
 Dla każdego elementu w wektorze powinien zostać, wywołany operator delete. W szczególności używanie funkcji typu std::erase czy std::remove (i ich wariantów, typu std::remove\_if), czyszczenie pojemnika, itp. same nie dają poprawnego rozwiązania – na elementach musi byd jawnie wywołany operator delete, bo żadna z takich funkcji tego sama nie robi. Jeżeli mamy do czynienia z kontenerem obiektów ( czyli nie przechowujemy danych prymitywnych np. char lub wskaźników ) to możemy wywołać funkcję std::vector<T>::clear() która wywoła na każdym obiekcie operację delete.
 
+% 18 ---------------------------------------------------------------------------------------------------------------
+
+\section{IT1A\_W04,IT1A\_U04,IT1A\_U07,IT1A\_U21}
+\textbf{Szablon set<T> zdefiniowany w standardowej bibliotece C++ (STL) przechowuje elementy w drzewiastych strukturach danych. Który z przedstawionych typów danych moze byc zastosowany jako parametr instancjacji szablonu set<T>? }
+
+\subsection{Odpowiedź}
+Każdy typ, który ma przeładowany operator < lub jeśli podamy przy tworzeniu kolekcji własny komperator
+\textbf{set<Typ, Komperator> kolekcja;}
+
+Komperator ma postać:
+\begin{lstlisting}[language=c]
+struct CustomComperator {
+	bool operator()(A const& lhs, A const& rhs) const {
+		return lhs.getValue()<rhs.getValue();
+	}
+};
+\end{lstlisting}
+
+\subsection{Przykładowy kod}
+\begin{lstlisting}[language=c]
+class A {
+	
+	private:
+		int value;
+	
+	public:
+		
+		A(int value=0) {
+			this->value=value;
+		}
+		
+		int getValue(void) const {
+			return value;
+		}
+		
+		void setValue(int value) {
+			this->value=value;
+		}
+		
+		friend ostream& operator<<(ostream& out, A const& obj) {
+			out << obj.value;
+		}
+		
+		A operator+(A const& obj) const {
+			return A(value+obj.value);
+		}
+		
+		A& operator+=(A const& obj) {
+			value+=obj.value;
+		}
+		
+		bool operator<(A const& obj) const {
+			return value<obj.value;
+		}
+};
+
+struct CustomComperator {
+	bool operator()(A const& lhs, A const& rhs) const {
+		return lhs.getValue()<rhs.getValue();
+	}
+};
+
+int main(int argc, char** argv) {
+	
+//	set<A, CustomComperator> mapa;
+	set<A> mapa;
+	
+	mapa.insert(A(4));
+	mapa.insert(A(2));
+	mapa.insert(A(1));
+	
+	for(set<A>::iterator it=mapa.begin(); it!=mapa.end(); ++it) {
+		cout << *it << endl;
+	}
+	
+	return 0;
+}
+\end{lstlisting}
+
 % 19 ---------------------------------------------------------------------------------------------------------------
 
 \section{IT1A\_W04,IT1A\_U04,IT1A\_U07,IT1A\_U21}
